Bug 406308. Don't fire accessible focus events if widget is not actually in focus, confuses screen readers. r=ginn, r=surkov, a=beltzner for 1.9b4